Simplified device id cookie

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout_HackathonHandler.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Shared/_Layout_HackathonHandler.cshtml
@@ -15,9 +15,7 @@
     {
         var guid = Guid.NewGuid().ToString();
         teamCookieValue = guid;
-        Context.Response.Cookies.Append("team", teamCookieValue,
-            new Microsoft.AspNetCore.Http.CookieOptions()
-            { Expires = DateTime.Now.AddDays(3)});
+        Context.Response.Cookies.Append("team", teamCookieValue);
     }
     else
     {
