--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Sms/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Sms/Index.cshtml
@@ -2,7 +2,7 @@
 @model Lazztech.Cloud.ClientFacade.Pages.Events.Admin.Sms.IndexModel
 @{
     ViewData["Title"] = "Index";
-    var properties = typeof(HackathonManager.DTO.SmsDto).GetProperties();
+    var properties = typeof(Lazztech.Events.Dto.Models.SmsDto).GetProperties();
 }
 
 <h2>Sms Log</h2>
