--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Teams/Edit.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Admin/Teams/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model Lazztech.Cloud.ClientFacade.Pages.Events.Admin.Teams.EditModel
-@using HackathonManager;
+@using Lazztech.Events.Dto.Enums;
 
 @{
     ViewData["Title"] = "Edit";
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Team.Location" class="control-label"></label>
-                <select asp-for="Team.Location" asp-items="@Html.GetEnumSelectList<RoomNameEnum>()" class="form-control"></select>
+                <select asp-for="Team.Location" asp-items="@Html.GetEnumSelectList(typeof(RoomNameEnum))" class="form-control"></select>
                 <span asp-validation-for="Team.Location" class="text-danger"></span>
             </div>
             <div class="form-group">
