Added message in the redirect to Event Index from the MentorRequest Action in the HomeController

--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
@@ -12,7 +12,7 @@
 @if (Model.Message != null)
 {
     <div class="alert alert-danger" role="alert">
-        The mentor you selected is currently helping someone else! Please select another.
+        @Model.Message
     </div>
 }
 
