--- a/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
+++ b/Lazztech.ObsidianPresences.ClientFacade/Pages/Events/Event/Index.cshtml
@@ -18,8 +18,14 @@
     </div>
     @if (Model.Message != null)
     {
-        <div class="alert alert-danger" role="alert">
+        <div class="alert alert-success" role="alert">
             @Model.Message
+        </div>
+    }
+    else if (Model.Alert != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @Model.Alert
         </div>
     }
     <h2>Present Mentors</h2>
