--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Event/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Event/Index.cshtml
@@ -82,7 +82,7 @@
                     <div class="modal-body">
                         <form>
                             <div class="form-group">
-                                @Html.HiddenFor(x => x.UniqueUserId);
+                                @Html.Hidden("uniqueRequesteeId", Model.UniqueRequesteeId);
                                 @Html.TextBox("teamName", null, htmlAttributes: new { @class = "form-control", @placeholder = "Team name", @type = "text" })
                                 <br />
                                 @Html.TextBox("teamLocation", null, htmlAttributes: new { @class = "form-control", @placeholder = "Description of where you're sitting", @type = "text" })
