--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/MentorInvites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/MentorInvites.cshtml
@@ -4,5 +4,53 @@
     ViewData["Title"] = "MentorInvite";
 }
 
-<h2>MentorInvite</h2>
+<h2>Mentor Invites</h2>
+
+
+<h4>Sent</h4>
+
+<div class="row">
+    <div class="col">
+        <table class="table table-striped table-dark table-responsive">
+            <thead>
+                <tr>
+                    <th>Created</th>
+                </tr>
+                <tr>
+                    <th>Name</th>
+                </tr>
+                <tr>
+                    <th>Opened</th>
+                </tr>
+                <tr>
+                    <th>Accepted</th>
+                </tr>
+                <tr>
+                    <th>Resend</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var invite in Model.Invites)
+                {
+                    <tr>
+                        <td>@invite.DateTimeWhenCreated</td>
+                    </tr>
+                    <tr>
+                        <td>@invite.Mentor.FullName</td>
+                    </tr>
+                    <tr>
+                        <td>@invite.DateTimeWhenViewed</td>
+                    </tr>
+                    <tr>
+                        <td>@invite.Accepted</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
 
