--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/MentorInvites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/MentorInvites.cshtml
@@ -6,10 +6,11 @@
 
 <h2>Mentor Invites</h2>
 <hr />
+<h4>Invite New Mentor</h4>
 <div class="row">
     <div class="col">
         <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger">
+            @*<div asp-validation-summary="ModelOnly" class="text-danger">*@
                 <div class="form-group">
                     <label asp-for="NewMentor.Email" class="custom-control-label"></label>
                     <input asp-for="NewMentor.Email" class="form-control" />
@@ -23,7 +24,7 @@
                 <div class="form-group">
                     <input type="submit" value="Send Invite" class="btn btn-default" />
                 </div>
-            </div>
+            @*</div>*@
         </form>
     </div>
 </div>
@@ -32,42 +33,26 @@
 
 <div class="row">
     <div class="col">
-        <table class="table table-striped table-dark table-responsive">
+        <table class="table table-striped table-dark">
             <thead>
                 <tr>
                     <th>Created</th>
-                </tr>
-                <tr>
                     <th>Name</th>
-                </tr>
-                <tr>
                     <th>Opened</th>
-                </tr>
-                <tr>
                     <th>Accepted</th>
-                </tr>
-                <tr>
                     <th>Resend</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var invite in Model.Invites)
                 {
-                    <tr>
-                        <td>@invite.DateTimeWhenCreated</td>
-                    </tr>
-                    <tr>
-                        <td>@invite.Mentor.FullName</td>
-                    </tr>
-                    <tr>
-                        <td>@invite.DateTimeWhenViewed</td>
-                    </tr>
-                    <tr>
-                        <td>@invite.Accepted</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                    </tr>
+                <tr>
+                    <td>@invite.DateTimeWhenCreated</td>
+                    <td>@invite.Mentor.FullName</td>
+                    <td>@invite.DateTimeWhenViewed</td>
+                    <td>@invite.Accepted</td>
+                    <td></td>
+                </tr>
                 }
             </tbody>
         </table>
