--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Index.cshtml
@@ -22,17 +22,8 @@
             <td>Seatle Eastside</td>
             <td>@DateTime.Now</td>
             <td>
-                <button type="button" class="btn btn-dark"><a href="/Events/Admin">Admin</a></button>
-                <button type="button" class="btn btn-link"><a href="/Events/Event">Go To Event</a></button>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Seattle</td>
-            <td>@DateTime.Now</td>
-            <td>
-                <button type="button" class="btn btn-dark">Manage</button>
-                <button type="button" class="btn btn-link">Go To Event</button>
+                <a class="btn btn-dark" href="/Events/Admin" role="button">Admin</a>
+                <a class="btn btn-dark" href="/Events/Event" role="button">Go To Event</a>
             </td>
         </tr>
     </tbody>
