--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/MentorInvites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/MentorInvites.cshtml
@@ -30,7 +30,7 @@
 
 <div class="row">
     <div class="col">
-        <table class="table table-striped table-dark">
+        <table class="table table-striped table-dark table-responsive-sm">
             <thead>
                 <tr>
                     <th>Created</th>
@@ -57,5 +57,6 @@
         </table>
     </div>
 </div>
+
 
 
