Added link styling to MentorInvites Admin page

--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/MentorInvites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/MentorInvites.cshtml
@@ -51,7 +51,7 @@
                     <td>@invite.Mentor.PhoneNumber</td>
                     <td>@invite.DateTimeWhenViewed</td>
                     <td>@invite.Accepted</td>
-                    <td>@invite.InviteLink</td>
+                    <td><a href="@invite.InviteLink">@invite.InviteLink</a></td>
                     <td></td>
                 </tr>
                 }
