--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Invites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Invites.cshtml
@@ -49,7 +49,7 @@
                 <span asp-validation-for="Mentor.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Submit" class="btn btn-default" />
             </div>
         </form>
     </div>
