--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Mentors/Create.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Mentors/Create.cshtml
@@ -11,8 +11,15 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Photo" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Photo" type="file" class="form-control" style="height:auto" />
+                    <span asp-validation-for="Photo" class="text-danger"></span>
+                </div>
+            </div>
             <div class="form-group">
                 <label asp-for="Mentor.FirstName" class="control-label"></label>
                 <input asp-for="Mentor.FirstName" class="form-control" />
@@ -22,11 +29,6 @@
                 <label asp-for="Mentor.LastName" class="control-label"></label>
                 <input asp-for="Mentor.LastName" class="form-control" />
                 <span asp-validation-for="Mentor.LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Mentor.Image" class="control-label"></label>
-                <input asp-for="Mentor.Image" class="form-control" />
-                <span asp-validation-for="Mentor.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Mentor.Description" class="control-label"></label>
