--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Mentors/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Mentors/Index.cshtml
@@ -5,14 +5,17 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Mentors</h2>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a class="btn btn-dark" role="button" asp-page="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-striped table-dark table-responsive-sm table-responsive-md">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Mentor[0].Image)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Mentor[0].FirstName)
             </th>
@@ -20,19 +23,7 @@
                 @Html.DisplayNameFor(model => model.Mentor[0].LastName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Mentor[0].Image)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Mentor[0].Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Mentor[0].ProfessionalTitle)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Mentor[0].PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Mentor[0].Email)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Mentor[0].IsAvailable)
@@ -44,8 +35,12 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Mentor) {
+        @foreach (var item in Model.Mentor)
+        {
         <tr>
+            <td>
+                <img src="@item.Image" class="img-thumbnail" width="100"/>
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
@@ -53,19 +48,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProfessionalTitle)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsAvailable)
@@ -74,11 +57,15 @@
                 @Html.DisplayFor(modelItem => item.IsPresent)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn btn-dark" role="button" asp-page="./Edit" asp-route-id="@item.Id">Edit</a>
+            </td>
+            <td>
+                <a class="btn btn-dark" role="button" asp-page="./Details" asp-route-id="@item.Id">Details</a>
+            </td>
+            <td>
+                <a class="btn btn-dark" role="button" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+        }
     </tbody>
 </table>
