Added Image upload to the Edit page and made the Create page save the mentor after it's awaited the image upload

--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Mentors/Create.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Mentors/Create.cshtml
@@ -20,6 +20,7 @@
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
             </div>
+            <input type="hidden" asp-for="Mentor.Id" />
             <div class="form-group">
                 <label asp-for="Mentor.FirstName" class="control-label"></label>
                 <input asp-for="Mentor.FirstName" class="form-control" />
