--- a/Lazztech.Cloud.ClientFacade/Pages/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Index.cshtml
@@ -7,16 +7,9 @@
 <div class="jumbotron">
     @*<h1>Landing Page</h1>*@
     <p class="lead">To make an apple pie from scratch you must first invent the universe.</p>
-    <p class="lead">@*Your plants are blank today:..*@</p>
 </div>
 
-@*<h4>Dashboard</h4>
-    <hr>
-
-    <p>Graph about vision</p>
-    <p>Graph about plants</p>*@
-
-<div class="container">
+@*<div class="container">
     <div class="row">&nbsp;</div>
     <div class="row">
         <div class="col-6">&nbsp;</div>
@@ -40,4 +33,4 @@
     </div>
 </div>
 <script src="~/lib/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chat.js"></script>
+<script src="~/js/chat.js"></script>*@
