--- a/Lazztech.Cloud.ClientFacade/Pages/_ViewStart.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/_ViewStart.cshtml
@@ -1,3 +1,10 @@
-﻿@{
-    Layout = "_Layout";
+﻿@{ 
+    if (this.User.Identity.IsAuthenticated)
+    {
+        Layout = "_Layout_Admin";
+    }
+    else
+    {
+        Layout = "_Layout_Anonymous";
+    }
 }
