--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout.cshtml
@@ -5,17 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Lazztech.Cloud.CloudWebApp</title>
 
-    <!-- <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment> -->
-
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -29,27 +18,7 @@
     </environment>
 </head>
 <body>
-    <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-page="/Index" class="navbar-brand">Lazztech.Cloud.CloudWebApp</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav> -->
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">Lazztech Cloud</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,53 +27,13 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    @*<a class="nav-link" asp-controller="Home" asp-action="Index">Home<span class="sr-only">(current)</span></a>*@
-                    @*<a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>*@
-                    <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
-                </li>
-                @*<li class="nav-item">
-            <a class="nav-link" href="/Vision">Vision</a>
-        </li>*@
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/Vision" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Vision
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/Vision">Index</a>
-                        <a class="dropdown-item" href="/Vision/Processed">Processed</a>
-                        <a class="dropdown-item" href="/Vision/Known">Known</a>
-                        <a class="dropdown-item" href="/Vision/Scan">Scan</a>
-                        <a class="dropdown-item" href="/Vision/Upload">Upload</a>
-                        <a class="dropdown-item" href="/Vision/Settings">Settings</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Events/Event">Event</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Events">Events</a>
+                    <a class="nav-link" href="https://lazz.tech/">About Gian Lazzarini</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Crawler">Crawler</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Garden">Garden</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Cogneat">Cogneat</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Notifications">Notifications</a>
-                </li>
-                @*<a class="nav-link dropdown-toggle" href="/Notifications" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Notifications
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/Notifications">Index</a>
-        </div>*@
             </ul>
-            @*<form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>*@
             <partial name="_LoginPartial" />
         </div>
     </nav>
@@ -112,33 +41,33 @@
     @*<partial name="_CookieConsentPartial" />*@
 
     <div class="container body-content">
-        @{
-            var routes = Context.Request.Path.Value.Split('/');
-        }
+        @*@{
+                var routes = Context.Request.Path.Value.Split('/');
+            }
 
-        @if (Context.Request.Path != "/")
-        {
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    @for (int i = 0; i < routes.Count(); i++)
-                    {
-                        @if (i == 0)
+            @if (Context.Request.Path != "/")
+            {
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        @for (int i = 0; i < routes.Count(); i++)
                         {
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            @if (i == 0)
+                            {
+                                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            }
+                            else if (routes[i] != routes.Last())
+                            {
+                                <li class="breadcrumb-item"><a href="/@routes[i]">@routes[i]</a></li>
+                            }
+                            else if (routes[i] == routes.Last())
+                            {
+                                <li class="breadcrumb-item active" aria-current="page">@routes[i]</li>
+                            }
                         }
-                        else if (routes[i] != routes.Last())
-                        {
-                            <li class="breadcrumb-item"><a href="/@routes[i]">@routes[i]</a></li>
-                        }
-                        else if (routes[i] == routes.Last())
-                        {
-                            <li class="breadcrumb-item active" aria-current="page">@routes[i]</li>
-                        }
-                    }
-                </ol>
-            </nav>
-            <br />
-        }
+                    </ol>
+                </nav>
+                <br />
+            }*@
         @RenderBody()
     </div>
 
