Trying to add admin role check for selecting the page layout

--- a/Lazztech.Cloud.ClientFacade/Pages/_ViewStart.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/_ViewStart.cshtml
@@ -1,5 +1,9 @@
 ﻿@{ 
-    if (this.User.Identity.IsAuthenticated)
+    if (User.IsInRole("Admin"))
+    {
+        Layout = "_Layout_Admin";
+    }
+    else if (this.User.Identity.IsAuthenticated)
     {
         Layout = "_Layout_Admin";
     }
