--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout_Admin.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/_Layout_Admin.cshtml
@@ -112,33 +112,7 @@
     @*<partial name="_CookieConsentPartial" />*@
 
     <div class="container body-content">
-        @{
-            var routes = Context.Request.Path.Value.Split('/');
-        }
-
-        @if (Context.Request.Path != "/")
-        {
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    @for (int i = 0; i < routes.Count(); i++)
-                    {
-                        @if (i == 0)
-                        {
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        }
-                        else if (routes[i] != routes.Last())
-                        {
-                            <li class="breadcrumb-item"><a href="/@routes[i]">@routes[i]</a></li>
-                        }
-                        else if (routes[i] == routes.Last())
-                        {
-                            <li class="breadcrumb-item active" aria-current="page">@routes[i]</li>
-                        }
-                    }
-                </ol>
-            </nav>
-            <br />
-        }
+        <partial name="_BreadCrumbPartial" />
         @RenderBody()
     </div>
 
