--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Voice/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Voice/Index.cshtml
@@ -6,3 +6,45 @@
 
 <h2>Index</h2>
 
+<form method="post" enctype="multipart/form-data">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="Audio" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Audio" type="file" class="form-control" style="height:auto" />
+            <span asp-validation-for="Audio" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="NewUpload.FileName" class="custom-control-label"></label>
+        <input asp-for="NewUpload.FileName" class="form-control" />
+        <span asp-validation-for="NewUpload.FileName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Send Invite" class="btn btn-default" />
+    </div>
+</form>
+
+<div class="row">
+    <div class="col">
+        <table class="table table-striped table-dark table-responsive-sm">
+            <thead>
+                <tr>
+                    <th>Upload Date</th>
+                    <th>File Name</th>
+                    <th>Call Link</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var upload in Model.Uploads.OrderByDescending(x => x.UploadDate))
+                {
+                    <tr>
+                        <td>@upload.UploadDate</td>
+                        <td>@upload.FileName</td>
+                        <td><a href="./Call?Id=@upload.Id">Call</a></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
