--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Voice/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Voice/Index.cshtml
@@ -21,7 +21,7 @@
         <span asp-validation-for="NewUpload.FileName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Send Invite" class="btn btn-default" />
+        <input type="submit" value="Upload" class="btn btn-default" />
     </div>
 </form>
 
