Initiated first call and uploaded the audio but don't have it playing my audio yet

--- a/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Voice/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Events/Admin/Voice/Index.cshtml
@@ -41,7 +41,7 @@
                     <tr>
                         <td>@upload.UploadDate</td>
                         <td>@upload.FileName</td>
-                        <td><a href="./Call?Id=@upload.Id">Call</a></td>
+                        <td><a href="./Voice/Call?Id=@upload.Id">Call</a></td>
                     </tr>
                 }
             </tbody>
