Fixed Events SelectLists to show organization name instead of id in the dropdown list

--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Events/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Events/Index.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.DateOfEvent)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Organization.OrganizationId)
+                @Html.DisplayFor(modelItem => item.Organization.Name)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.EventId">Edit</a> |
