Fixed the EventMentors Select lists to use the name instead of id and also changed the index to display names not ids

--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/EventMentors/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/EventMentors/Index.cshtml
@@ -26,10 +26,10 @@
 @foreach (var item in Model.EventMentor) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Event.EventId)
+                @Html.DisplayFor(modelItem => item.Event.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Mentor.MentorId)
+                @Html.DisplayFor(modelItem => item.Mentor.FullName)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
