Fixed Mentor crud SelectList to show dropdown of event name for the eventid

--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Details.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Details.cshtml
@@ -69,7 +69,7 @@
             @Html.DisplayNameFor(model => model.Mentor.Event)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Mentor.Event.EventId)
+            @Html.DisplayFor(model => model.Mentor.Event.Name)
         </dd>
     </dl>
 </div>
