--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Edit.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Edit.cshtml
@@ -52,14 +52,14 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input asp-for="Mentor.IsAvailable" /> @Html.DisplayNameFor(model => model.IsAvailable)
+                        <input asp-for="Mentor.IsAvailable" /> @Html.DisplayNameFor(model => model.Mentor.IsAvailable)
                     </label>
                 </div>
             </div>
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input asp-for="Mentor.IsPresent" /> @Html.DisplayNameFor(model => model.IsPresent)
+                        <input asp-for="Mentor.IsPresent" /> @Html.DisplayNameFor(model => model.Mentor.IsPresent)
                     </label>
                 </div>
             </div>
