--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Index.cshtml
@@ -77,7 +77,7 @@
                 @Html.DisplayFor(modelItem => item.IsPresent)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Event.EventId)
+                @Html.DisplayFor(modelItem => item.Event.Name)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.MentorId">Edit</a> |
