--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Index.cshtml
@@ -10,23 +10,17 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-striped table-dark table-responsive-sm table-responsive-md">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Mentor[0].Image)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Mentor[0].FirstName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Mentor[0].LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Mentor[0].Image)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Mentor[0].Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Mentor[0].ProfessionalTitle)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Mentor[0].PhoneNumber)
@@ -44,25 +38,21 @@
                 @Html.DisplayNameFor(model => model.Mentor[0].Event)
             </th>
             <th></th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model.Mentor) {
         <tr>
             <td>
+                <img src="@item.Image" class="img-thumbnail" width="100" />
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProfessionalTitle)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
@@ -80,9 +70,13 @@
                 @Html.DisplayFor(modelItem => item.Event.Name)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.MentorId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.MentorId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.MentorId">Delete</a>
+                <a class="btn btn-dark" role="button" asp-page="./Edit" asp-route-id="@item.MentorId">Edit</a>
+            </td>
+            <td>
+                <a class="btn btn-dark" role="button" asp-page="./Details" asp-route-id="@item.MentorId">Details</a>
+            </td>
+            <td>
+                <a class="btn btn-dark" role="button" asp-page="./Delete" asp-route-id="@item.MentorId">Delete</a>
             </td>
         </tr>
 }
