--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Index.cshtml
@@ -10,28 +10,38 @@
 <br />
 <div class="row">
     <div class="col">
-        <h3>Events</h3>
+        <h3>Organizations</h3>
         <p>
-            Number of Events: @Model.OrganizationCount
+            Count: @Model.OrganizationCount
         </p>
         <a class="btn btn-dark" href="./Mentors" role="button">Manage Organizations</a>
     </div>
     <div class="col">
         <h3>Events</h3>
         <p>
-            Number of Events: @Model.EventCount
+            Count: @Model.EventCount
         </p>
         <a class="btn btn-dark" href="./Mentors" role="button">Manage Events</a>
     </div>
     <div class="col">
         <h3>Mentors</h3>
         <p>
-            Number of Mentors: @Model.MentorCount
+            Count: @Model.MentorCount
         </p>
         <a class="btn btn-dark" href="./Mentors" role="button">Manage Mentors</a>
     </div>
     <div class="col">
+        <h3>Mentor Requests</h3>
+        <p>
+            Count: @Model.MentorRequestCount
+        </p>
+        <a class="btn btn-dark" href="./MentorInvites" role="button">Mentor Invites</a>
+    </div>
+    <div class="col">
         <h3>Mentor Invites</h3>
+        <p>
+            Count: @Model.MentorInviteCount
+        </p>
         <a class="btn btn-dark" href="./MentorInvites" role="button">Mentor Invites</a>
     </div>
 </div>
