--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/MentorInvites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/MentorInvites.cshtml
@@ -11,6 +11,10 @@
 <form method="post">
     @*<div asp-validation-summary="ModelOnly" class="text-danger">*@
     <div class="form-group">
+        <label asp-for="NewMentor.EventId" class="control-label"></label>
+        <select asp-for="NewMentor.EventId" class="form-control" asp-items="ViewBag.EventId"></select>
+    </div>
+    <div class="form-group">
         <label asp-for="NewMentor.Email" class="custom-control-label"></label>
         <input asp-for="NewMentor.Email" class="form-control" />
         <span asp-validation-for="NewMentor.Email" class="text-danger"></span>
