--- a/Lazztech.Cloud.ClientFacade/Pages/Event/Invites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Event/Invites.cshtml
@@ -17,6 +17,7 @@
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
             </div>
+            <input type="hidden" asp-for="Mentor.MentorId" />
             <div class="form-group">
                 <label asp-for="Mentor.FirstName" class="control-label"></label>
                 <input asp-for="Mentor.FirstName" class="form-control" />
