--- a/Lazztech.Cloud.ClientFacade/Pages/Event/Invites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Event/Invites.cshtml
@@ -17,8 +17,11 @@
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
             </div>
-            <input type="hidden" asp-for="Invite.MentorId" />
             <input type="hidden" asp-for="Invite.MentorInviteId" />
+            <input type="hidden" asp-for="Invite.MentorId" />
+            <input type="hidden" asp-for="Invite.Mentor" />
+            <input type="hidden" asp-for="Invite.EventId" />
+            <input type="hidden" asp-for="Invite.Event" />
             <div class="form-group">
                 <label asp-for="Invite.Mentor.FirstName" class="control-label"></label>
                 <input asp-for="Invite.Mentor.FirstName" class="form-control" />
