Deleted old mongodb based /Events/Index which has been replaced by efcore based Admin/EventManagement/Index

--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Index.cshtml
@@ -47,6 +47,31 @@
 </div>
 <br />
 <hr>
+
+<h2>Events</h2>
+<br />
+<table class="table table-striped table-dark">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Location</th>
+            <th scope="col">Date</th>
+            <th scope="col">Manage</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Seatle Eastside</td>
+            <td>@DateTime.Now</td>
+            <td>
+                <a class="btn btn-dark" href="/Events/Admin" role="button">Admin</a>
+                <a class="btn btn-dark" href="/Events/Event" role="button">Go To Event</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
 <h2>10 Recent Sms Messages</h2>
 <br />
 <div class="row">
